[gd_scene load_steps=12 format=3 uid="uid://bvi1ilpwuasyd"]

[ext_resource type="Script" uid="uid://cgclnyaddq7d5" path="res://src/main.gd" id="1_eb6dy"]
[ext_resource type="PackedScene" uid="uid://ylgluvg6dpeb" path="res://scenes/player.tscn" id="1_o5qli"]
[ext_resource type="Texture2D" uid="uid://dc3mdoithg4jt" path="res://assets/atlastexture.tres" id="2_jkv2x"]
[ext_resource type="Shader" uid="uid://c01l0fm45f4st" path="res://shaders/blacktotransparent.gdshader" id="2_tefeu"]
[ext_resource type="Shader" uid="uid://cbkmclkkuxdic" path="res://shaders/crt.gdshader" id="2_trceg"]
[ext_resource type="Script" uid="uid://dkf1wgitqul3x" path="res://src/tab_container.gd" id="4_tipki"]
[ext_resource type="PackedScene" uid="uid://dotn1cw7jasj3" path="res://scenes/world.tscn" id="5_tbgi4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o6xl0"]
shader = ExtResource("2_tefeu")
shader_parameter/target_color = Color(0, 0, 0, 1)
shader_parameter/color_tolerance = 0.01
shader_parameter/alpha_threshold = 0.5

[sub_resource type="AtlasTexture" id="AtlasTexture_jbj1t"]
atlas = ExtResource("2_jkv2x")
region = Rect2(1015, 482, 12, 12)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tefeu"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a8y0u"]
shader = ExtResource("2_trceg")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(1152, 648)
shader_parameter/pixelate = false
shader_parameter/roll = false
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 0.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 4.7499999933364734e-08
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.0050000002375
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="Main" type="Node2D"]
script = ExtResource("1_eb6dy")

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="datetime" type="Label" parent="UI"]
z_index = 1
offset_right = 40.0
offset_bottom = 22.0
mouse_filter = 0
text = "titlecard"

[node name="health" type="HBoxContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_bottom = 30.0
grow_horizontal = 0
mouse_filter = 0

[node name="heart" type="TextureRect" parent="UI/health"]
material = SubResource("ShaderMaterial_o6xl0")
layout_mode = 2
texture = SubResource("AtlasTexture_jbj1t")
expand_mode = 2

[node name="heart2" type="TextureRect" parent="UI/health"]
layout_mode = 2
texture = SubResource("AtlasTexture_jbj1t")
expand_mode = 2

[node name="heart3" type="TextureRect" parent="UI/health"]
layout_mode = 2
texture = SubResource("AtlasTexture_jbj1t")
expand_mode = 2

[node name="heart4" type="TextureRect" parent="UI/health"]
layout_mode = 2
texture = SubResource("AtlasTexture_jbj1t")
expand_mode = 2

[node name="ColorRect" type="ColorRect" parent="UI"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -618.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TabContainer" type="TabContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -149.0
offset_right = 350.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
current_tab = 0
tabs_position = 1
drag_to_rearrange_enabled = true
tab_focus_mode = 0
script = ExtResource("4_tipki")

[node name="Inventory" type="PanelContainer" parent="UI/TabContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tefeu")
metadata/_tab_index = 0

[node name="Grid" type="GridContainer" parent="UI/TabContainer/Inventory"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 7

[node name="Stats" type="Panel" parent="UI/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Options" type="Panel" parent="UI/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Scroll" type="ScrollContainer" parent="UI/TabContainer/Options"]
layout_mode = 0
offset_right = 306.0
offset_bottom = 110.0
horizontal_scroll_mode = 0
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TabContainer/Options/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/TabContainer/Options/Scroll/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Label" type="Label" parent="UI/TabContainer/Options/Scroll/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="UI/TabContainer/Options/Scroll/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -6.0
max_value = 6.0

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/TabContainer/Options/Scroll/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Label" type="Label" parent="UI/TabContainer/Options/Scroll/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sound"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="UI/TabContainer/Options/Scroll/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -6.0
max_value = 6.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TabContainer/Options/Scroll/VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="UI/TabContainer/Options/Scroll/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Regen World"

[node name="Button3" type="Button" parent="UI/TabContainer/Options/Scroll/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+1 hr"

[node name="Button" type="Button" parent="UI/TabContainer/Options/Scroll/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="PanelContainer" type="Panel" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -438.0
offset_top = -149.0
grow_horizontal = 0
grow_vertical = 0

[node name="chatbox" type="RichTextLabel" parent="UI/PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
theme_override_font_sizes/bold_italics_font_size = 12
theme_override_font_sizes/italics_font_size = 12
theme_override_font_sizes/mono_font_size = 12
scroll_following = true

[node name="PauseMenu" type="CanvasLayer" parent="."]
layer = 4

[node name="shader" type="CanvasLayer" parent="."]
layer = 5

[node name="ColorRect" type="ColorRect" parent="shader"]
material = SubResource("ShaderMaterial_a8y0u")
offset_left = -124.0
offset_top = -111.0
offset_right = 1292.0
offset_bottom = 771.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="entities" type="Node2D" parent="."]
z_index = 1

[node name="player" parent="entities" instance=ExtResource("1_o5qli")]

[node name="world" parent="." instance=ExtResource("5_tbgi4")]

[connection signal="value_changed" from="UI/TabContainer/Options/Scroll/VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="UI/TabContainer/Options/Scroll/VBoxContainer/HBoxContainer3/HSlider" to="." method="_on_h_slider2_value_changed"]
[connection signal="pressed" from="UI/TabContainer/Options/Scroll/VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="UI/TabContainer/Options/Scroll/VBoxContainer/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="UI/TabContainer/Options/Scroll/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
